cmake_minimum_required(VERSION 3.7 FATAL_ERROR)

project(LeetCodeTasks CXX)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories("external/googletest/include")
link_directories(external/googletest/bin)

enable_testing()
# Algorithms
add_subdirectory(Algorithms/CommonLib bin/CommonLib)
add_subdirectory(Algorithms/0001.TwoSum bin/0001.TwoSum)
add_subdirectory(Algorithms/0002.AddTwoNumbers bin/0002.AddTwoNumbers)
add_subdirectory(Algorithms/0003.LongestSubstringWithoutRepeatingCharacters bin/0003.LongestSubstringWithoutRepeatingCharacters)
add_subdirectory(Algorithms/0006.ZigZagConversion bin/0006.ZigZagConversion)
add_subdirectory(Algorithms/0007.ReverseInteger bin/0007.ReverseInteger)
add_subdirectory(Algorithms/0008.StringToInteger bin/0008.StringToInteger)
add_subdirectory(Algorithms/0009.PalindromeNumber bin/0009.PalindromeNumber)
add_subdirectory(Algorithms/0010.RegularExpressionMatching bin/0010.RegularExpressionMatching)
add_subdirectory(Algorithms/0011.ContainerWithMostWater bin/0011.ContainerWithMostWater)
add_subdirectory(Algorithms/0012.IntegerToRoman bin/0012.IntegerToRoman)
add_subdirectory(Algorithms/0013.RomanToInteger bin/0013.RomanToInteger)
add_subdirectory(Algorithms/0014.LongestCommonPrefix bin/0014.LongestCommonPrefix)
add_subdirectory(Algorithms/0015.3Sum bin/0015.3Sum)
add_subdirectory(Algorithms/0016.3SumClosest bin/0016.3SumClosest)
add_subdirectory(Algorithms/0017.LetterCombinationsOfPhoneNumber bin/0017.LetterCombinationsOfPhoneNumber)
add_subdirectory(Algorithms/0018.4Sum bin/0018.4Sum)
add_subdirectory(Algorithms/0019.RemoveNthNodeFromEndOfList bin/0019.RemoveNthNodeFromEndOfList)
add_subdirectory(Algorithms/0020.ValidParentheses bin/0020.ValidParentheses)
add_subdirectory(Algorithms/0021.MergeTwoSortedLists bin/0021.MergeTwoSortedLists)
add_subdirectory(Algorithms/0023.MergeKSortedLists bin/0023.MergeKSortedLists)
add_subdirectory(Algorithms/0022.GenerateParentheses bin/0022.GenerateParentheses)
add_subdirectory(Algorithms/0024.SwapNodesInPairs bin//0024.SwapNodesInPairs)
add_subdirectory(Algorithms/0026.RemoveDuplicatesFromSortedArray bin/0026.RemoveDuplicatesFromSortedArray)
add_subdirectory(Algorithms/0027.RemoveElement bin/0027.RemoveElement)
add_subdirectory(Algorithms/0028.Implement_strStr bin/0028.Implement_strStr)
add_subdirectory(Algorithms/0029.DivideTwoIntegers bin/0029.DivideTwoIntegers)
add_subdirectory(Algorithms/0033.SearchInRotatedSortedArray bin/0033.SearchInRotatedSortedArray)
add_subdirectory(Algorithms/0034.FindFirstAndLastPositionOfElementInSortedArray bin/0034.FindFirstAndLastPositionOfElementInSortedArray)
add_subdirectory(Algorithms/0035.SearchInsertPosition bin/0035.SearchInsertPosition)
add_subdirectory(Algorithms/0036.ValidSudoku bin/0036.ValidSudoku)
add_subdirectory(Algorithms/0038.CountAndSay bin/0038.CountAndSay)
add_subdirectory(Algorithms/0041.FirstMissingPositive bin/0041.FirstMissingPositive)
add_subdirectory(Algorithms/0043.MultiplyStrings bin/0043.MultiplyStrings)
add_subdirectory(Algorithms/0045.JumpGameII bin/0045.JumpGameII)
add_subdirectory(Algorithms/0046.Permutations bin/0046.Permutations)
add_subdirectory(Algorithms/0047.PermutationsII bin/0047.PermutationsII)
add_subdirectory(Algorithms/0048.RotateImage bin/0048.RotateImage)
add_subdirectory(Algorithms/0049.GroupAnagrams bin/0049.GroupAnagrams)
add_subdirectory(Algorithms/0050.Pow bin/0050.Pow)
add_subdirectory(Algorithms/0051.NQueens bin/0051.NQueens)
add_subdirectory(Algorithms/0052.NQueensII bin/0052.NQueensII)
add_subdirectory(Algorithms/0054.SpiralMatrix bin/0054.SpiralMatrix)
add_subdirectory(Algorithms/0055.JumpGame bin/0055.JumpGame)
add_subdirectory(Algorithms/0056.MergeIntervals bin/0056.MergeIntervals)
add_subdirectory(Algorithms/0057.InsertInterval bin/0057.InsertInterval)
add_subdirectory(Algorithms/0058.LengthOfLastWord bin/0058.LengthOfLastWord)
add_subdirectory(Algorithms/0059.SpiralMatrixII bin/0059.SpiralMatrixII)
add_subdirectory(Algorithms/0060.PermutationSequence bin/0060.PermutationSequence)
add_subdirectory(Algorithms/0061.RotateList bin/0061.RotateList)
add_subdirectory(Algorithms/0062.UniquePaths bin/0062.UniquePaths)
add_subdirectory(Algorithms/0063.UniquePathsII bin/0063.UniquePathsII)
add_subdirectory(Algorithms/0064.MinimumPathSum bin/0064.MinimumPathSum)
add_subdirectory(Algorithms/0065.ValidNumber bin/0065.ValidNumber)
add_subdirectory(Algorithms/0066.PlusOne bin/0066.PlusOne)
add_subdirectory(Algorithms/0067.AddBinary bin/0067.AddBinary)
add_subdirectory(Algorithms/0068.TextJustification bin/0068.TextJustification)
add_subdirectory(Algorithms/0069.Sqrt bin/0069.Sqrt)
add_subdirectory(Algorithms/0070.ClimbingStairs bin/0070.ClimbingStairs)
add_subdirectory(Algorithms/0071.SimplifyPath bin/0071.SimplifyPath)
add_subdirectory(Algorithms/0072.EditDistance bin/0072.EditDistance)
add_subdirectory(Algorithms/0073.SetMatrixZeroes bin/0073.SetMatrixZeroes)
add_subdirectory(Algorithms/0074.Search2DMatrix bin/0074.Search2DMatrix)
add_subdirectory(Algorithms/0075.SortColors bin/0075.SortColors)
add_subdirectory(Algorithms/0077.Combinations bin/0077.Combinations)
add_subdirectory(Algorithms/0078.Subsets bin/0078.Subsets)
add_subdirectory(Algorithms/0080.RemoveDuplicatesFromSortedArrayII bin/0080.RemoveDuplicatesFromSortedArrayII)
add_subdirectory(Algorithms/0081.SearchInRotatedSortedArrayII bin/0081.SearchInRotatedSortedArrayII)
add_subdirectory(Algorithms/0082.RemoveDuplicatesFromSortedListII bin/0082.RemoveDuplicatesFromSortedListII)
add_subdirectory(Algorithms/0083.RemoveDuplicatesFromSortedList bin/0083.RemoveDuplicatesFromSortedList)
add_subdirectory(Algorithms/0086.PartitionList bin/0086.PartitionList)
add_subdirectory(Algorithms/0091.DecodeWays bin/0091.DecodeWays)
add_subdirectory(Algorithms/0092.ReverseLinkedListII bin/0092.ReverseLinkedListII)
add_subdirectory(Algorithms/0093.RestoreIPAddresses bin/0093.RestoreIPAddresses)
add_subdirectory(Algorithms/0094.BinaryTreeInorderTraversal bin/0094.BinaryTreeInorderTraversal)
add_subdirectory(Algorithms/0098.ValidateBinarySearchTree bin/0098.ValidateBinarySearchTree)
add_subdirectory(Algorithms/0100.SameTree bin/0100.SameTree)
add_subdirectory(Algorithms/0101.SymmetricTree bin/0101.SymmetricTree)
add_subdirectory(Algorithms/0102.BinaryTreeLevelOrderTraversal bin/0102.BinaryTreeLevelOrderTraversal)
add_subdirectory(Algorithms/0103.BinaryTreeZigzagLevelOrderTraversal bin/0103.BinaryTreeZigzagLevelOrderTraversal)
add_subdirectory(Algorithms/0104.MaximumDepthOfBinaryTree bin/0104.MaximumDepthOfBinaryTree)
add_subdirectory(Algorithms/0107.BinaryTreeLevelOrderTraversalII bin/0107.BinaryTreeLevelOrderTraversalII)
add_subdirectory(Algorithms/0108.ConvertSortedArrayToBinarySearchTree bin/0108.ConvertSortedArrayToBinarySearchTree)
add_subdirectory(Algorithms/0109.ConvertSortedListToBinarySearchTree bin/0109.ConvertSortedListToBinarySearchTree)
add_subdirectory(Algorithms/0110.BalancedBinaryTree bin/0110.BalancedBinaryTree)
add_subdirectory(Algorithms/0111.MinimumDepthOfBinaryTree bin/0111.MinimumDepthOfBinaryTree)
add_subdirectory(Algorithms/0112.PathSum bin/0112.PathSum)
add_subdirectory(Algorithms/0113.PathSumII bin/0113.PathSumII)
add_subdirectory(Algorithms/0114.FlattenBinaryTreeToLinkedList bin/0114.FlattenBinaryTreeToLinkedList)
add_subdirectory(Algorithms/0116.PopulatingNextRightPointersInEachNode bin/0116.PopulatingNextRightPointersInEachNode)
add_subdirectory(Algorithms/0117.PopulatingNextRightPointersInEachNodeII bin/0117.PopulatingNextRightPointersInEachNodeII)
add_subdirectory(Algorithms/0118.PascalTriangle bin/0118.PascalTriangle)
add_subdirectory(Algorithms/0119.PascalTriangleII bin/0119.PascalTriangleII)
add_subdirectory(Algorithms/0120.Triangle bin/0120.Triangle)
add_subdirectory(Algorithms/0121.BestTimeToBuyAndSellStock bin/0121.BestTimeToBuyAndSellStock)
add_subdirectory(Algorithms/0125.ValidPalindrome bin/0125.ValidPalindrome)
add_subdirectory(Algorithms/0129.SumRootToLeafNumbers bin/0129.SumRootToLeafNumbers)
add_subdirectory(Algorithms/0134.GasStation bin/0134.GasStation)
add_subdirectory(Algorithms/0136.SingleNumber bin/0136.SingleNumber)
add_subdirectory(Algorithms/0141.LinkedListCycle bin/0141.LinkedListCycle)
add_subdirectory(Algorithms/0143.ReorderList bin/0143.ReorderList)
add_subdirectory(Algorithms/0144.BinaryTreePreorderTraversal bin/0144.BinaryTreePreorderTraversal)
add_subdirectory(Algorithms/0145.BinaryTreePostorderTraversal bin/0145.BinaryTreePostorderTraversal)
add_subdirectory(Algorithms/0150.EvaluateReversePolishNotation bin/0150.EvaluateReversePolishNotation)
add_subdirectory(Algorithms/0151.ReverseWordsInString bin/0151.ReverseWordsInString)
add_subdirectory(Algorithms/0153.FindMinimumInRotatedSortedArray bin/0153.FindMinimumInRotatedSortedArray)
add_subdirectory(Algorithms/0155.MinStack bin/0155.MinStack)
add_subdirectory(Algorithms/0162.FindPeakElement bin/0162.FindPeakElement)
add_subdirectory(Algorithms/0165.CompareVersionNumbers bin/0165.CompareVersionNumbers)
add_subdirectory(Algorithms/0167.TwoSumII bin/0167.TwoSumII)
add_subdirectory(Algorithms/0168.ExcelSheetColumnTitle bin/0168.ExcelSheetColumnTitle)
add_subdirectory(Algorithms/0169.MajorityElement bin/0169.MajorityElement)
add_subdirectory(Algorithms/0171.ExcelSheetColumnNumber bin/0171.ExcelSheetColumnNumber)
add_subdirectory(Algorithms/0172.FactorialTrailingZeroes bin/0172.FactorialTrailingZeroes)
add_subdirectory(Algorithms/0187.RepeatedDNASequences bin/0187.RepeatedDNASequences)
add_subdirectory(Algorithms/0190.ReverseBits bin/0190.ReverseBits)
add_subdirectory(Algorithms/0191.NumberOf1Bits bin/0191.NumberOf1Bits)
add_subdirectory(Algorithms/0201.BitwiseAndOfNumbersRange bin/0201.BitwiseAndOfNumbersRange)
add_subdirectory(Algorithms/0202.HappyNumber bin/0202.HappyNumber)
add_subdirectory(Algorithms/0203.RemoveLinkedListElements bin/0203.RemoveLinkedListElements)
add_subdirectory(Algorithms/0204.CountPrimes bin/0204.CountPrimes)
add_subdirectory(Algorithms/0205.IsomorphicStrings bin/0205.IsomorphicStrings)
add_subdirectory(Algorithms/0206.ReverseLinkedList bin/0206.ReverseLinkedList)
add_subdirectory(Algorithms/0207.CourseSchedule bin/0207.CourseSchedule)
add_subdirectory(Algorithms/0208.ImplementTrie bin/0208.ImplementTrie)
add_subdirectory(Algorithms/0209.MinimumSizeSubarraySum bin/0209.MinimumSizeSubarraySum)
add_subdirectory(Algorithms/0210.CourseScheduleII bin/0210.CourseScheduleII)
add_subdirectory(Algorithms/0217.ContainsDuplicate bin/0217.ContainsDuplicate)
add_subdirectory(Algorithms/0219.ContainsDuplicateII bin/0219.ContainsDuplicateII)
add_subdirectory(Algorithms/0224.BasicCalculator bin/0224.BasicCalculator)
add_subdirectory(Algorithms/0225.ImplementStackUsingQueues bin/0225.ImplementStackUsingQueues)
add_subdirectory(Algorithms/0226.InvertBinaryTree bin/0226.InvertBinaryTree)
add_subdirectory(Algorithms/0227.BasicCalculatorII bin/0227.BasicCalculatorII)
add_subdirectory(Algorithms/0228.SummaryRanges bin/0228.SummaryRanges)
add_subdirectory(Algorithms/0230.KthSmallestElementInBST bin/0230.KthSmallestElementInBST)
add_subdirectory(Algorithms/0231.PowerOfTwo bin/0231.PowerOfTwo)
add_subdirectory(Algorithms/0232.ImplementQueueUsingStacks bin/0232.ImplementQueueUsingStacks)
add_subdirectory(Algorithms/0235.LowestCommonAncestorOfBinarySearchTree bin/0235.LowestCommonAncestorOfBinarySearchTree)
add_subdirectory(Algorithms/0237.DeleteNodeInLinkedList bin/0237.DeleteNodeInLinkedList)
add_subdirectory(Algorithms/0239.SlidingWindowMaximum bin/0239.SlidingWindowMaximum)
add_subdirectory(Algorithms/0242.ValidAnagram bin/0242.ValidAnagram)
add_subdirectory(Algorithms/0257.BinaryTreePaths bin/0257.BinaryTreePaths)
add_subdirectory(Algorithms/0258.AddDigits bin/0258.AddDigits)
add_subdirectory(Algorithms/0263.UglyNumber bin/0263.UglyNumber)
add_subdirectory(Algorithms/0268.MissingNumber bin/0268.MissingNumber)
add_subdirectory(Algorithms/0273.IntegerToEnglishWords bin/0273.IntegerToEnglishWords)
add_subdirectory(Algorithms/0278.FirstBadVersion bin/0278.FirstBadVersion)
add_subdirectory(Algorithms/0283.MoveZeroes bin/0283.MoveZeroes)
add_subdirectory(Algorithms/0289.GameOfLife bin/0289.GameOfLife)
add_subdirectory(Algorithms/0290.WordPattern bin/0290.WordPattern)
add_subdirectory(Algorithms/0292.NimGame bin/0292.NimGame)
add_subdirectory(Algorithms/0297.SerializeAndDeserializeBinaryTree bin/0297.SerializeAndDeserializeBinaryTree)
add_subdirectory(Algorithms/0299.BullsAndCows bin/0299.BullsAndCows)
add_subdirectory(Algorithms/0326.PowerOfThree bin/0326.PowerOfThree)
add_subdirectory(Algorithms/0328.OddEvenLinkedList bin/0328.OddEvenLinkedList)
add_subdirectory(Algorithms/0342.PowerOfFour bin/0342.PowerOfFour)
add_subdirectory(Algorithms/0344.ReverseString bin/0344.ReverseString)
add_subdirectory(Algorithms/0345.ReverseVowelsOfString bin/0345.ReverseVowelsOfString)
add_subdirectory(Algorithms/0349.IntersectionOfTwoArrays bin/0349.IntersectionOfTwoArrays)
add_subdirectory(Algorithms/0350.IntersectionOfTwoArraysII bin/0350.IntersectionOfTwoArraysII)
add_subdirectory(Algorithms/0357.CountNumbersWithUniqueDigits bin/0357.CountNumbersWithUniqueDigits)
add_subdirectory(Algorithms/0367.ValidPerfectSquare bin/0367.ValidPerfectSquare)
add_subdirectory(Algorithms/0374.GuessNumberHigherOrLower bin/0374.GuessNumberHigherOrLower)
add_subdirectory(Algorithms/0387.FirstUniqueCharacterInString bin/0387.FirstUniqueCharacterInString)
add_subdirectory(Algorithms/0388.LongestAbsoluteFilePath bin/0388.LongestAbsoluteFilePath)
add_subdirectory(Algorithms/0389.FindDifference bin/0389.FindDifference)
add_subdirectory(Algorithms/0392.IsSubsequence bin/0392.IsSubsequence)
add_subdirectory(Algorithms/0393.UTF8Validation bin/0393.UTF8Validation)
add_subdirectory(Algorithms/0397.IntegerReplacement bin/0397.IntegerReplacement)
add_subdirectory(Algorithms/0404.SumOfLeftLeaves bin/0404.SumOfLeftLeaves)
add_subdirectory(Algorithms/0405.ConvertNumberToHexadecimal bin/0405.ConvertNumberToHexadecimal)
add_subdirectory(Algorithms/0412.FizzBuzz bin/0412.FizzBuzz)
add_subdirectory(Algorithms/0414.ThirdMaximumNumber bin/0414.ThirdMaximumNumber)
add_subdirectory(Algorithms/0415.AddStrings bin/0415.AddStrings)
add_subdirectory(Algorithms/0434.NumberOfSegmentsInString bin/0434.NumberOfSegmentsInString)
add_subdirectory(Algorithms/0441.ArrangingCoins bin/0441.ArrangingCoins)
add_subdirectory(Algorithms/0442.FindAllDuplicatesInArray bin/0442.FindAllDuplicatesInArray)
add_subdirectory(Algorithms/0443.StringCompression bin/0443.StringCompression)
add_subdirectory(Algorithms/0445.AddTwoNumbersII bin/0445.AddTwoNumbersII)
add_subdirectory(Algorithms/0448.FindAllNumbersDisappearedInArray bin/0448.FindAllNumbersDisappearedInArray)
add_subdirectory(Algorithms/0449.SerializeAndDeserializeBST bin/0449.SerializeAndDeserializeBST)
add_subdirectory(Algorithms/0463.IslandPerimeter bin/0463.IslandPerimeter)
add_subdirectory(Algorithms/0476.NumberComplement bin/0476.NumberComplement)
add_subdirectory(Algorithms/0482.LicenseKeyFormatting bin/0482.LicenseKeyFormatting)
add_subdirectory(Algorithms/0492.ConstructTheRectangle bin/0492.ConstructTheRectangle)
add_subdirectory(Algorithms/0498.DiagonalTraverse bin/0498.DiagonalTraverse)
add_subdirectory(Algorithms/0500.KeyboardRow bin/0500.KeyboardRow)
add_subdirectory(Algorithms/0504.Base7 bin/0504.Base7)
add_subdirectory(Algorithms/0506.RelativeRanks bin/0506.RelativeRanks)
add_subdirectory(Algorithms/0507.PerfectNumber bin/0507.PerfectNumber)
add_subdirectory(Algorithms/0509.FibonacciNumber bin/0509.FibonacciNumber)
add_subdirectory(Algorithms/0520.DetectCapital bin/0520.DetectCapital)
add_subdirectory(Algorithms/0529.Minesweeper bin/0529.Minesweeper)
add_subdirectory(Algorithms/0537.ComplexNumberMultiplication bin/0537.ComplexNumberMultiplication)
add_subdirectory(Algorithms/0539.MinimumTimeDifference bin/0539.MinimumTimeDifference)
add_subdirectory(Algorithms/0540.SingleElementInSortedArray bin/0540.SingleElementInSortedArray)
add_subdirectory(Algorithms/0541.ReverseStringII bin/0541.ReverseStringII)
add_subdirectory(Algorithms/0551.StudentAttendanceRecordI bin/0551.StudentAttendanceRecordI)
add_subdirectory(Algorithms/0552.StudentAttendanceRecordII bin/0552.StudentAttendanceRecordII)
add_subdirectory(Algorithms/0557.ReverseWordsInStringIII bin/0557.ReverseWordsInStringIII)
add_subdirectory(Algorithms/0561.ArrayPartitionI bin/0561.ArrayPartitionI)
add_subdirectory(Algorithms/0566.ReshapeMatrix bin/0566.ReshapeMatrix)
add_subdirectory(Algorithms/0657.RobotReturnToOrigin bin/0657.RobotReturnToOrigin)
add_subdirectory(Algorithms/0717.OneAndTwoBitCharacters bin/0717.OneAndTwoBitCharacters)
add_subdirectory(Algorithms/1309.DecryptStringFromAlphabetToIntegerMapping bin/1309.DecryptStringFromAlphabetToIntegerMapping)

